Centrat Test login facebook

--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,10 @@
     font-family: "Armonioso";
     src: url('./Armonioso-trial.otf') format('opentype');
 }
+
+#content {
+    
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
